# adventofcode

./: .gitignore  README.md  build.sh  hie.yaml  run.sh
2017/: abi.txt  asm.sh  common.asm  d1a.asm  run.elf
2020/: d10p19.js  d10p20.js  d11p21.js  d11p22.js  d12p23.js  d12p24.js  d13p25.js  d14p27.js  d14p28.js  d15p29.js  d15p30.cpp  d16p31.js  d16p32.js  d17p33.js  d17p34.js  d18p35.js  d18p36.js  d19p37.js  d19p38.js  d1p1.js  d1p2.js  d20p39.js  d2p3.js  d2p4.js  d3p5.js  d3p6.js  d4p7.js  d4p8.js  d5p10.js  d5p9.js  d6p11.js  d6p12.js  d7p13.js  d7p14.js  d8p15.js  d8p16.js  d9p17.js  d9p18.js
2021/: d10a.js  d10b.js  d11a.js  d11b.js  d12a.js  d12b.js  d13a.js  d13b.js  d14a.js  d14b.js  d15a.js  d15b.js  d16a.js  d16b.js  d17a.js  d17b.js  d18a.js  d18b.js  d19a.js  d1a.js  d1b.js  d2a.js  d2b.js  d3a.js  d3b.js  d4a.js  d4b.js  d5a.js  d5b.js  d6a.js  d6b.js  d7a.js  d7b.js  d8a.js  d8b.js  d9a.js  d9b.js  input.txt
2022/: Cargo.toml
2022/src/: gl.rs  main.rs  s0.rs  s1.rs  s10.rs  s11.rs  s12.rs  s13.rs  s14.rs  s15.rs  s16.rs  s17.rs  s18.rs  s19.rs  s2.rs  s20.rs  s21.rs  s22.rs  s23.rs  s24.rs  s25.rs  s26.rs  s27.rs  s28.rs  s29.rs  s3.rs  s30.rs  s31.rs  s32.rs  s33.rs  s34.rs  s35.rs  s36.rs  s37.rs  s38.rs  s39.rs  s4.rs  s40.rs  s41.rs  s42.rs  (+13 more)
2023/: CMakeLists.txt  rules.md
2023/src/: lib.S  lib.h.S  main.S  p10a.S  p10b.S  p11a.S  p11b.S  p12a.S  p12b.S  p13a.S  p13b.S  p14a.S  p14b.S  p15a.S  p15b.S  p1a.S  p1b.S  p2a.S  p2b.S  p3a.S  p3b.S  p4a.S  p4b.S  p5a.S  p5b.S  p6a.S  p6b.S  p7a.S  p7b.S  p8a.S  p8b.S  p9a.S  p9b.S
2024/: p1.hs  p10.hs  p11.hs  p12.hs  p13.hs  p2.hs  p3.hs  p4.hs  p5.hs  p6.hs  p7.hs  p8.hs  p9.hs
