[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
# Before Day 1, based on a suggestion from a r/adventofcode user
bstr = "1.0.1"

# Day 3, iter_array_chunks is still unstable
itermore = "0.4.0"

# Day 8, brute-forced with GLSL compute shader
glfw = "0.45.0"

# Day 13, no way I'm building a JSON parser from scratch
serde_json = "1.0.89"
serde = "1.0.150"

# Day 16, less-than-ideal time complexity paired with 8 cores
rayon = "1.5.3"
indicatif = { version = "0.17.2", features = ["rayon"] }

# Day 17, used to hash the last 200 rows to check for cycles
ring = "0.17.0-alpha.11"